--- a/FaceDetection.ipynb
+++ b/FaceDetection.ipynb
@@ -1062,131 +1062,13 @@
     }
    ],
    "source": [
-    "\n",
-    "# Load a model\n",
-    "# model = YOLO('yolov8s-pose.yaml')  # build a new model from YAML\n",
-    "model = YOLO('yolov8s.pt')  # load a pretrained model (recommended for training)\n",
+    "from ultralytics import YOLO\n",
+    "model = YOLO('yolov8s.pt')\n",
     "\n",
     "# Train the model\n",
     "model.train(data='face_detection.yaml', name='FacialDetection', seed=42, epochs=100, patience=20, rect=True, optimizer='Adam')\n",
     "valid_results = model.val()\n",
     "print(valid_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = YOLO('best.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "image 1/1 d:\\GitHub\\FaceRecognition_FeatureExtractor\\lacto.jpg: 640x480 3 Faces, 224.8ms\n",
-      "Speed: 4.0ms preprocess, 224.8ms inference, 2.2ms postprocess per image at shape (1, 3, 640, 480)\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = model.predict('lacto.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ultralytics.engine.results.Results object with attributes:\n",
-       "\n",
-       "boxes: ultralytics.engine.results.Boxes object\n",
-       "keypoints: None\n",
-       "masks: None\n",
-       "names: {0: 'Face'}\n",
-       "orig_img: array([[[ 61,  69,  69],\n",
-       "        [ 62,  70,  70],\n",
-       "        [ 63,  71,  71],\n",
-       "        ...,\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28]],\n",
-       "\n",
-       "       [[ 61,  69,  69],\n",
-       "        [ 62,  70,  70],\n",
-       "        [ 63,  71,  71],\n",
-       "        ...,\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28]],\n",
-       "\n",
-       "       [[ 61,  69,  69],\n",
-       "        [ 61,  69,  69],\n",
-       "        [ 63,  71,  71],\n",
-       "        ...,\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28],\n",
-       "        [ 28,  28,  28]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 60,  76,  75],\n",
-       "        [ 58,  74,  73],\n",
-       "        [ 64,  80,  79],\n",
-       "        ...,\n",
-       "        [102, 105, 119],\n",
-       "        [112, 115, 129],\n",
-       "        [120, 123, 137]],\n",
-       "\n",
-       "       [[ 55,  70,  72],\n",
-       "        [ 53,  68,  70],\n",
-       "        [ 61,  76,  78],\n",
-       "        ...,\n",
-       "        [113, 116, 130],\n",
-       "        [131, 134, 148],\n",
-       "        [143, 146, 160]],\n",
-       "\n",
-       "       [[ 53,  68,  70],\n",
-       "        [ 50,  65,  67],\n",
-       "        [ 54,  69,  71],\n",
-       "        ...,\n",
-       "        [120, 123, 137],\n",
-       "        [142, 145, 159],\n",
-       "        [158, 161, 175]]], dtype=uint8)\n",
-       "orig_shape: (1024, 768)\n",
-       "path: 'd:\\\\GitHub\\\\FaceRecognition_FeatureExtractor\\\\lacto.jpg'\n",
-       "probs: None\n",
-       "save_dir: None\n",
-       "speed: {'preprocess': 3.0031204223632812, 'inference': 45.000553131103516, 'postprocess': 282.1469306945801}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results[0].save_crop('test2.jpg')"
    ]
   }
  ],
