--- a/face_recognition_deepface.ipynb
+++ b/face_recognition_deepface.ipynb
@@ -4,21 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecção Facial"
+    "# 1) Identificação do Problema"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Treinamento do Modelo"
+    "O problema abordado pelo projeto é o de identificação facial, ou seja, identificar indivíduos a partir de uma foto. Nesse contexto, o objetivo é não apenas identificar os rostos presentes na imagem, mas fazer  reconhecimento de indivíduos pré-cadastrados e a estimativa de caracaterísticas deles como: Gênero, Idade, Emoção e Raça."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparação do Dataset"
+    "# 2) Pré-Processamento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preparação do Dataset"
    ]
   },
   {
@@ -42,6 +49,13 @@
     "--------train/\n",
     "        \n",
     "--------val/    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset: https://www.kaggle.com/datasets/sbaghbidi/human-faces-object-detection?select=faces.csv"
    ]
   },
   {
@@ -124,7 +138,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Treinamento"
+    "# 3) Extração de Padrões "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detecção Facial"
    ]
   },
   {
@@ -176,12 +197,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Função para detecção e reconhecimento facial"
+    "## Reconhecimento Facial e extração de características"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para o reconhecimento de características das pessoas e identificação de indivíduos, foi utilizado o modelo pré treinado DeepFace. Para o reconhecimento de indivíduos o modelo funciona gerando embeddings dos indivíduos a partir de imagens de cadastro, e compara os embeddings de novas imagens com as do seu banco de dados. Dessa forma, se uma função de semelhança retornar um valor maior que um threshold pré determinado, ele considera que houve identificação do indivíduo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23-12-20 19:50:53 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
+      "23-12-20 19:50:53 - There are 2 representations found in representations_vgg_face.pkl\n",
+      "23-12-20 19:50:54 - find function lasts 1.1697442531585693 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Eduardo'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from deepface import DeepFace\n",
+    "person = DeepFace.find('./Fotos/Eduardo.jpg', db_path = \"./db_rostos\")\n",
+    "person[0].identity[0].split('/')[2].split('.')[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4) Pós Processamento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função visa detectar inicialmente os rostos da imagem passada, com isso, para cada rosto, fazer o reconhecimento e extração de características"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +320,13 @@
     "            image = cv2.putText(image, f'E: {emotion}', (x1+5, y0+78), cv2.FONT_HERSHEY_PLAIN, 1, (255, 255, 255), 1) \n",
     "            image = cv2.putText(image, f'R: {race}', (x1+5, y0+98), cv2.FONT_HERSHEY_PLAIN, 1, (255, 255, 255), 1) \n",
     "        except:\n",
-    "            pass\n",
+    "\n",
+    "            start_point = (x0, y0)\n",
+    "            end_point = (x1, y1)\n",
+    "            color = (172, 52, 52)\n",
+    "            thickness = 2\n",
+    "            image = cv2.rectangle(image, start_point, end_point, color, thickness)\n",
+    "            \n",
     "    return image"
    ]
   },
@@ -255,12 +334,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plataforma Web para uso do conhecimento"
+    "# 5) Uso do conhecimento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De forma a utilizar o conhecimento gerado pela agregação dos dois modelos, foi criada uma plataforma web simples com uso da biblioteca Dash, do python. Nela, o usuário faz upload da foto que deseja analisar, o modelo analisa a foto e ela é mostrada de volta para o usuário, que pode fazer edições para circular pessoas não encontradas pelo modelo ou ressaltar uma parte da imagem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,86 +364,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x20e59dcca90>"
+       "<IPython.lib.display.IFrame at 0x145731c1110>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 640x480 5 Faces, 177.2ms\n",
-      "Speed: 36.5ms preprocess, 177.2ms inference, 2.0ms postprocess per image at shape (1, 3, 640, 480)\n",
-      "23-12-17 20:40:44 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
-      "23-12-17 20:40:44 - There are 2 representations found in representations_vgg_face.pkl\n",
-      "23-12-17 20:40:44 - find function lasts 0.3456571102142334 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: race: 100%|██████████| 4/4 [00:00<00:00,  4.25it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23-12-17 20:40:45 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
-      "23-12-17 20:40:45 - There are 2 representations found in representations_vgg_face.pkl\n",
-      "23-12-17 20:40:45 - find function lasts 0.37296009063720703 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: race: 100%|██████████| 4/4 [00:00<00:00,  4.41it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23-12-17 20:40:46 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
-      "23-12-17 20:40:46 - There are 2 representations found in representations_vgg_face.pkl\n",
-      "23-12-17 20:40:47 - find function lasts 0.31015682220458984 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: race: 100%|██████████| 4/4 [00:00<00:00,  4.41it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23-12-17 20:40:48 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
-      "23-12-17 20:40:48 - There are 2 representations found in representations_vgg_face.pkl\n",
-      "23-12-17 20:40:48 - find function lasts 0.3055891990661621 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: race: 100%|██████████| 4/4 [00:00<00:00,  4.27it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23-12-17 20:40:49 - ⚠️ Representations for images in ./db_rostos folder were previously stored in representations_vgg_face.pkl. If you added new instances after the creation, then please delete this file and call find function again. It will create it again.\n",
-      "23-12-17 20:40:49 - There are 2 representations found in representations_vgg_face.pkl\n"
-     ]
     }
    ],
    "source": [
@@ -450,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
