Ultimos ajustes textuais

--- a/face_recognition_deepface.ipynb
+++ b/face_recognition_deepface.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O problema abordado pelo projeto é o de identificação facial, ou seja, identificar indivíduos a partir de uma foto. Nesse contexto, o objetivo é não apenas identificar os rostos presentes na imagem, mas fazer  reconhecimento de indivíduos pré-cadastrados e a estimativa de caracaterísticas deles como: Gênero, Idade, Emoção e Raça."
+    "O problema abordado pelo projeto é o de identificação facial, ou seja, identificar indivíduos a partir de uma foto. Nesse contexto, o objetivo é não apenas identificar os rostos presentes na imagem, mas fazer  reconhecimento de indivíduos pré-cadastrados e a estimativa de caracaterísticas deles como: Gênero, Idade, Emoção e Raça. Com isso em mente, é interessante gerar uma plataforma web em que um usuário qualquer pode acessar e fazer upload de uma foto, a foto será analisada e retornada para o usuário com a identificação dos rostos, características e invidíuos, após isso, podem ser feitas edições adicionais na foto e ela pode ser salva pelo usuário em seu computador."
    ]
   },
   {
@@ -386,9 +386,9 @@
     "\n",
     "canvas_width = 650\n",
     "\n",
+    "# Layout da página html\n",
     "app.layout = html.Div([\n",
     "    html.H2('Reconhecimento facial e análise de características', style={'text-align':'center'}),\n",
-    "\n",
     "\n",
     "    dcc.Upload(\n",
     "        id='upload-image',\n",
@@ -406,13 +406,12 @@
     "            'textAlign': 'center',\n",
     "            'margin': '10px'\n",
     "        },\n",
-    "        # Allow multiple files to be uploaded\n",
     "        multiple=True\n",
     "    ),\n",
     "    html.Div(id='output-image-upload',style={'width': '100%', 'display': 'flex', 'align-items':'center', 'justify-content':'center'})\n",
     "])\n",
     "\n",
-    "\n",
+    "# Funcao para aplicar o modelo na imagem e exibi-la ao usuario\n",
     "def parse_contents(contents, filename, date):\n",
     "    img = image_string_to_PILImage(contents)\n",
     "    img.save('img.jpg')\n",
@@ -428,6 +427,7 @@
     "                                width=canvas_width)])\n",
     "\n",
     "\n",
+    "# Funcao para reconhecer o upload de uma imagem e chamar a funcao acima\n",
     "@app.callback(Output('output-image-upload', 'children'),\n",
     "              Input('upload-image', 'contents'),\n",
     "              State('upload-image', 'filename'),\n",
